# snapi

./: Cargo.toml  Readme.md  level.html
src/: helper.rs  main.rs  snake_game.rs
src/snake_game/: fruit.rs  game.rs  game_level.rs  mod.rs  renderer.rs  snake.rs  tests.rs
