[package]
name = "snapi"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Gał <dev@krzysztofgal.pl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
axum = "0.5.16"
hyper = "0.14.20"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread", "signal"]}
serde = { version = "1.0.144", features = ["derive"] }

crossterm = "0.25.0"
